# sudoku

./: Board.h  CMakeLists.txt  Command.h  Editor.c  Editor.h  Game.h  GameManager.c  GameManager.h  Initializer.c  Initializer.h  MemoryError.c  MemoryError.h  Parser.c  Parser.h  Printer.c  Printer.h  README.md  Solver.c  Solver.h  StatesList.c  StatesList.h  UserHandler.c  UserHandler.h  main.c  makefile
Logic/: Backtracking.c  Backtracking.h  ILP.c  ILP.h
Parsing/: Parser.h  validation.h
components/: Board.c  Board.h  Game.c  Game.h  List.c  List.h  Move.c  Move.h  Stack.c  Stack.h  StatesList.c  StatesList.h
io/: Command.c  Command.h  Error.c  Error.h  Loader.c  Loader.h  Parser.c  Parser.h  Printer.c  Printer.h  Serializer.c  Serializer.h  validators.c  validators.h
logic/: Backtracking.c  Backtracking.h  ILP.c  ILP.h  LP.c  LP.h  actions.c  actions.h  backtracking.c  random.c  random.h  solver.c  solver.h
parsing/: Command.c  Command.h  Parser.c  Parser.h  validation.c  validation.h  validators.c  validators.h
test_files/boards/: board_2_2_almost_full.txt  board_2_2_four_solutions_with_fixed.txt  board_2_2_invalid.txt  board_2_2_two_solutions.txt  board_2_2_two_solutions_with_fixed.txt  board_2_3_empty.txt  board_2_3_invalid.txt  board_2_3_partial.txt  board_2_5_basic.txt  board_2_5_dimension_nan.txt  board_2_5_dimensions_too_large.txt  board_2_5_float_value.txt  board_2_5_illegal_fixed_values.txt  board_2_5_not_enough_values.txt  board_2_5_too_many_values.txt  board_2_5_value_nan.txt  board_2_5_value_too_large.txt  board_2_5_value_way_too_large.txt  board_2_5_weird_spaces.txt  board_2_5_with_fixed.txt  board_2_5_zero_fixed.txt  board_5_5_two_solutions.txt
